<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neartowhite"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearlayoutonst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:columnCount="2"
            android:rowCount="3">


            <Button
                android:id="@+id/shool_note"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/shapebutton"
                android:onClick="NextActivity"
                android:text="@string/hightschool_note"
                android:textColor="@color/gray"
                android:textSize="@dimen/main_xmt_btnsize" />

            <Button

                android:id="@+id/bac_note"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:background="@drawable/shapebutton"
                android:onClick="NextActivity"
                android:text="@string/bac_note"
                android:textColor="@color/gray"
                android:textSize="@dimen/main_xmt_btnsize" />

            <Button

                android:id="@+id/regiscien_note"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/shapebutton"
                android:onClick="NextActivity"
                android:text="@string/regionalscience_note"
                android:textColor="@color/gray"
                android:textSize="@dimen/main_xmt_btnsize" />

            <Button
                android:id="@+id/natisci_note"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/shapebutton"
                android:onClick="NextActivity"
                android:text="@string/nationalscience_note"
                android:textColor="@color/gray"
                android:textSize="@dimen/main_xmt_btnsize" />

            <Button
                android:id="@+id/regilett_note"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/shapebutton"
                android:onClick="NextActivity"
                android:text="@string/regionallettre_note"
                android:textColor="@color/gray"
                android:textSize="@dimen/main_xmt_btnsize" />

            <Button

                android:id="@+id/natiolett_note"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/shapebutton"
                android:onClick="NextActivity"
                android:text="@string/nationalettre_note"
                android:textColor="@color/gray"
                android:textSize="@dimen/main_xmt_btnsize" />
        </GridLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>