<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neartowhite"
    tools:context=".ForMenu.forAboutApp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="151dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txtbacnot_about"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintxtabout"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/txtabout"
            android:textColor="@color/gray"
            android:textSize="@dimen/textsize_inabout"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtaboufinal"
            android:textStyle="bold|italic"
            android:textColor="@color/gray"
            android:textSize="@dimen/textsize_inabout" />
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>